# walk_visualisation

./: CMakeLists.txt  README  data.cin  main.cpp  mainwindow.cpp  mainwindow.h  walk.h
CGAL/: Triangulation_2.h
